<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="playlist_market">Playlist market</string>
    <string name="search_text">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="night_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_service">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="system_text">Настройки</string>
    <string name="url_arrow">https://yandex.ru/legal/practicum_offer/</string>
    <string name="string_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="string_email_tittle">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="url_share">https://practicum.yandex.ru/android-developer/?from=catalog/</string>
    <string name="mail_address_user">digitex150@yandex.ru</string>
    <string name="editText" />
    <string name="name_artist_time">%1$s • %2$s</string>
    <string name="errorWifi">Проблемы со связью \n \n Загрузка не удалась. Проверьте подключение кинтернету</string>
    <string name="error_is_empty">Ничего не нашлось</string>
    <string name="Update">Обновить</string>
    <string name="clear_hictory_text_button">Очистить историю</string>
    <string name="find_you">Вы искали</string>
    <string name="collection_name">Трэк </string>
    <string name="release_date">1965</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="artist_name">Исполнитель</string>
    <string name="Strana">Страна</string>
    <string name="ganr">Жанр</string>
    <string name="god">Год</string>
    <string name="albom">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="current_track_time">00:00</string>
    <string name="Mediateka">Медиатека</string>
    <string name="mediateka_null">Ваша медиатека пуста</string>
    <string name="playlists_null">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist_text_button">Новый плейлист</string>
    <string name="favorites_tracks_text">Избранные треки</string>
    <string name="playlists_text">Плейлисты</string>
    <string name="new_play_list">Новый плейлист</string>
    <string name="greate">Создать</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="count_track">%1$s треков</string>
    <string name="add_in_playlist">Добавить в плейлист</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="count_track_time">%1$s минут • %2$s треков</string>
    <string name="share">Поделиться</string>
    <string name="information">Редактировать информацию</string>
    <string name="delet">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="nameList">Название листа</string>
    <string name="want_delete_playlist">Хотите удалить плейлист?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="want_delete_track">Хотите удалить трек?</string>
    <string name="playlist_create">Плейлист [%1$s] создан</string>
    <string name="playlist_save">Плейлист [%1$s] сохранен</string>
    <string name="empty_playlist_for_screen_fragment">в этом плейлисте нет треков</string>
    <string name="playlist_isEmpty_for_share">в данном плейлисте нет списка треков, которым можно поделиться</string>
    <string name="Track_add">Трек добавлен</string>
</resources>