<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/fragmentNewPlayList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playlist.ui.fragment.FragmentNewPlayList">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/dark_mode_arrow"
        app:title="@string/new_play_list"
        app:titleMargin="@dimen/indent_8dp"
        app:titleTextAppearance="@style/ToolbarStyle">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/pickerImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/indent_24dp"
        android:layout_marginTop="@dimen/indent_24dp"
        android:layout_marginEnd="@dimen/indent_24dp"
        android:adjustViewBounds="true"
        android:background="@drawable/dotted_line"
        android:scaleType="centerInside"
        android:src="@drawable/vector"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutName"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/indent_32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickerImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputName"
            style="@style/TextInputEditText"
            android:hint="@string/title" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/TextInputLayout"
        android:layout_marginTop="@dimen/indent_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDescription"
            style="@style/TextInputEditText"
            android:hint="@string/description" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreate"
        style="@style/ButtonStyle3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_16dp"
        android:layout_marginEnd="@dimen/indent_16dp"
        android:layout_marginBottom="@dimen/indent_32dp"
        android:background="@drawable/button_background"
        android:enabled="false"
        android:letterSpacing="0.05"
        android:padding="@dimen/indent_12dp"
        android:text="@string/greate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>